fixed open source link

--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
               © 2022
               <div>
                 <a
-                  href="https://github.com/Horv-Kitty"
+                  href="https://github.com/Horv-Kitty/real-portfolio"
                   class="open-source-code"
                   title="Check out the code"
                   >Open source code</a
