--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 
              <div class="pagedown-container">
           <div class="text">© 2022
-           <div> <a href="https://github.com/Horv-Kitty" class="open-source-code" title="Check out the code">Open source code</a> by Kitti Horvath</div></div>
+           <div> <a href="https://github.com/Horv-Kitty/real-portfolio" class="open-source-code" title="Check out the code">Open source code</a> by Kitti Horvath</div></div>
         </div>
   </body>
 </html>
