fixed open source link target

--- a/about.html
+++ b/about.html
@@ -267,6 +267,7 @@
                   href="https://github.com/Horv-Kitty/real-portfolio"
                   class="open-source-code"
                   title="Check out the code"
+                  target="_blank"
                   >Open source code</a
                 >
                 by Kitti Horvath
