--- a/project.html
+++ b/project.html
@@ -160,6 +160,7 @@
                     href="https://github.com/Horv-Kitty/real-portfolio"
                     class="open-source-code"
                     title="Check out the code"
+                    target="_blank"
                     >Open source code</a
                   >
                   by Kitti Horvath
