--- a/project.html
+++ b/project.html
@@ -97,25 +97,21 @@
               <div class="col-xl-6 project-container">
                 <div class="project-description">
                   <h2>HTML page</h2>
-                  <p class="mt-1 text-opi">
-                    <strong>SheCodes Basic Project</strong> <hr />
-                    The topic of the first project is the creation of a simple
+                  <span class="mt-1 text-opi">
+                    <strong>SheCodes Basic Project</strong>
+                    <hr />
+                    The topic of the first project was the creation of a simple
                     HTML page, during which I learned the basics of HTML, CSS,
                     and JavaScript.
-                  </p>
+                  </span>
+                  <br />
                   <a
                     href="https://www.shecodes.io/workshops/shecodes-basics-2c08e5f7-8f3b-440c-b9a5-8ad15609015e/projects/417482"
                     target="_blank"
                     title="Check out the project"
-                    class="btn btn-branding-outline"
+                    class="btn btn-branding-outline mt-3"
                     >Launch project</a
                   >
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-12">
-                  <hr class="project-hr" />
                 </div>
               </div>
 
@@ -123,19 +119,22 @@
                 <div class="col-xl-6 project-container">
                   <div class="project-description">
                     <h2>Weather app</h2>
-                    <p class="mt-1 text-opi">
-                      <strong>SheCodes Plus Project</strong> <hr />
-                      The project is building a weather app with a 5-day
-                      forecast, Positioning, Celsius, and Fahrenheit unit
+                    <span class="mt-1 text-opi">
+                      <strong>SheCodes Plus Project</strong>
+                      <hr />
+                      The topic of the project was to build a weather app with a
+                      5-day forecast, Positioning, Celsius, and Fahrenheit unit
                       conversion, Search engine, API integration. I used HTML,
                       CSS, JavaScript, and Bootstrap for creating the website
                       and hosted it on Netlify.
-                    </p>
+                    </span>
+                    <br />
+
                     <a
                       href="https://weather-app-86e3c6.netlify.app/"
                       target="_blank"
                       title="Check out the project"
-                      class="btn btn-branding-outline"
+                      class="btn btn-branding-outline mt-3"
                       >Launch project</a
                     >
                   </div>
