--- a/about.html
+++ b/about.html
@@ -92,16 +92,16 @@
                   </h6>
                   <hr />
                   <p>
-                    I was learning Graphic Design at the Highschool, so I have
+                    I learned Graphic Design at the Highschool, so I have
                     experience designing in programs such as
                     <strong>Photoshop</strong> and <strong>CorelDraw</strong>. I
-                    easily can use <strong>Figma</strong>, and I can code the
+                    can use <strong>Figma</strong> easily, and I can code the
                     designs into a responsive website using web technologies
                     like <strong>HTML</strong>, <strong>CSS</strong>,
                     <strong>JavaScript</strong>,
                     <strong>Bootstrap</strong> while I implement the
                     <strong>SEO</strong> technique, and <strong>Host</strong> it
-                    to a live server.
+                    on a live server.
                     <br />
                     <br />
                     Right now I'm following <strong>SheCodes</strong> courses,
@@ -143,33 +143,23 @@
 
                   <div class="container">
                     <div class="row mt-5">
-                      <div class="col-lg-2 mb-4">
+                      <div class="col-lg-3 mb-4">
                         <i class="fab fa-html5 skills-logos"></i><br />
                         HTML
                       </div>
-                      <div class="col-lg-2 mb-4">
+                      <div class="col-lg-3 mb-4">
                         <i class="fab fa-css3-alt skills-logos"></i><br />
                         CSS
                       </div>
-                      <div class="col-lg-2 mb-4">
+                      <div class="col-lg-3 mb-4">
                         <i class="fab fa-js-square skills-logos"></i
                         ><br />JavaScript
                       </div>
-                      <div class="col-lg-2 mb-4">
+                      <div class="col-lg-3 mb-4">
                         <i class="fas fa-code skills-logos"></i><br />VS Code
                       </div>
-                      <div class="col-lg-2 mb-4">
-                        <i class="fab fa-codepen skills-logos"></i>
-                        <br />
-                        Codepen
-                      </div>
-                      <div class="col-lg-2 mb-4">
-                        <i class="fab fa-github skills-logos"></i><br />
-                        Github
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-lg-3 mb-4">
+
+                      <div class="col-lg-4 mb-4">
                         <img
                           src="images/Adobe PS.svg"
                           alt="Adobe Photoshop logo"
@@ -179,7 +169,7 @@
                         <br />
                         Photoshop
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-lg-4 mb-4">
                         <img
                           src="images/coreldraw-logo.png"
                           alt="CorelDraw logo"
@@ -188,16 +178,9 @@
                         /><br />
                         CorelDraw
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-lg-4 mb-4">
                         <i class="fab fa-figma skills-logos"></i><br />Figma
                       </div>
-
-                      <div class="col-lg-3 mb-4">
-                        <i class="fab fa-bootstrap skills-logos"></i
-                        ><br />Bootstrap
-                      </div>
-                    </div>
-                    <div class="row">
                       <div class="col-lg-3 mb-4">
                         <i class="fas fa-code-branch skills-logos"></i
                         ><br />Hosting
@@ -211,6 +194,20 @@
                       <div class="col-lg-3 mb-4">
                         <i class="fas fa-tablet-alt skills-logos"></i
                         ><br />Responsive
+                      </div>
+
+                      <div class="col-lg-4 mb-4">
+                        <i class="fab fa-codepen skills-logos"></i>
+                        <br />
+                        Codepen
+                      </div>
+                      <div class="col-lg-4 mb-4">
+                        <i class="fab fa-bootstrap skills-logos"></i
+                        ><br />Bootstrap
+                      </div>
+                      <div class="col-lg-4 mb-4">
+                        <i class="fab fa-github skills-logos"></i><br />
+                        Github
                       </div>
                     </div>
                   </div>
