--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="description" content="Kitti is a front-end neveloper based in The Netherlands, Europe. Contact her by email." />
+    <meta
+      name="description"
+      content="Kitti is a front-end neveloper based in The Netherlands, Europe. Contact her by email."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +29,7 @@
     <title>Contact - Kitti Horvath - Front-end developer based in Europe</title>
   </head>
   <body>
-     <div class="container">
+    <div class="container">
       <div class="row">
         <div class="col-3 menu-container">
           <img
@@ -40,21 +43,30 @@
           <hr />
           <a href="project.html" title="Projects" class="menus">Projects</a>
           <hr />
-          <a href="contact.html" title="Contact me" class="menus active">Contact</a>
+          <a href="contact.html" title="Contact me" class="menus active"
+            >Contact</a
+          >
           <hr />
-          
+
           <h4>Social</h4>
           <hr class="social-hr" />
           <div class="social-images">
-            <a href="https://github.com/Horv-Kitty" target="_blank" title="Github Profile"
+            <a
+              href="https://github.com/Horv-Kitty"
+              target="_blank"
+              title="Github Profile"
               ><i class="fab fa-github-square"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/kitti-horv%C3%A1th-2285221b8/"
-              target="_blank" title="Linkedin Profile"
+              target="_blank"
+              title="Linkedin Profile"
               ><i class="fab fa-linkedin"></i
             ></a>
-            <a href="https://www.instagram.com/kitty.horv.ath/" target="_blank" title="Instagram Profile"
+            <a
+              href="https://www.instagram.com/kitty.horv.ath/"
+              target="_blank"
+              title="Instagram Profile"
               ><i class="fab fa-instagram-square"></i
             ></a>
           </div>
@@ -64,26 +76,52 @@
           <div class="heading-container">
             <h1>Contact me</h1>
           </div>
-           <div class="container">
-            <div class="row mb-5">
-              <div class="col-12">
-                <p class="contact-datas"><i class="far fa-envelope" title="Contact by email"></i> horvakitty@gmail.com<br /><i class="fas fa-map-marker-alt" title="Location"></i> Rotterdam, The Netherlands</p>
-              </div>
-            </div>
           <div class="container">
             <div class="row mb-5">
               <div class="col-12">
+                <p class="contact-datas">
+                  <i class="far fa-envelope" title="Contact by email"></i>
+                  horvakitty@gmail.com<br /><i
+                    class="fas fa-map-marker-alt"
+                    title="Location"
+                  ></i>
+                  Rotterdam, The Netherlands
+                </p>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row mb-5">
+                <div class="col-12">
+                  <div>
+                    <a
+                      href="mailto:horvakitty@gmail.com"
+                      class="btn btn-contact-send"
+                      title="Contact by email"
+                      >Send me an email...</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="pagedown-container">
+              <div class="text">
+                © 2022
                 <div>
-                <a href="mailto:horvakitty@gmail.com" class="btn btn-contact-send" title="Contact by email">Send me an email...</a
-                ></div>
+                  <a
+                    href="https://github.com/Horv-Kitty/real-portfolio"
+                    class="open-source-code"
+                    title="Check out the code"
+                    target="_blank"
+                    >Open source code</a
+                  >
+                  by Kitti Horvath
+                </div>
               </div>
             </div>
           </div>
-          
-
-             <div class="pagedown-container">
-          <div class="text">© 2022
-           <div> <a href="https://github.com/Horv-Kitty/real-portfolio" class="open-source-code" title="Check out the code" target="_blank">Open source code</a> by Kitti Horvath</div></div>
         </div>
+      </div>
+    </div>
   </body>
 </html>
