improve responsive code

--- a/about.html
+++ b/about.html
@@ -143,23 +143,23 @@
 
                   <div class="container">
                     <div class="row mt-5">
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fab fa-html5 skills-logos"></i><br />
                         HTML
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fab fa-css3-alt skills-logos"></i><br />
                         CSS
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fab fa-js-square skills-logos"></i
                         ><br />JavaScript
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fas fa-code skills-logos"></i><br />VS Code
                       </div>
 
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <img
                           src="images/Adobe PS.svg"
                           alt="Adobe Photoshop logo"
@@ -169,7 +169,7 @@
                         <br />
                         Photoshop
                       </div>
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <img
                           src="images/coreldraw-logo.png"
                           alt="CorelDraw logo"
@@ -178,34 +178,34 @@
                         /><br />
                         CorelDraw
                       </div>
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <i class="fab fa-figma skills-logos"></i><br />Figma
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fas fa-code-branch skills-logos"></i
                         ><br />Hosting
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fab fa-google skills-logos"></i><br />SEO
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fas fa-cogs skills-logos"></i><br />API
                       </div>
-                      <div class="col-lg-3 mb-4">
+                      <div class="col-md-3 mb-4">
                         <i class="fas fa-tablet-alt skills-logos"></i
                         ><br />Responsive
                       </div>
 
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <i class="fab fa-codepen skills-logos"></i>
                         <br />
                         Codepen
                       </div>
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <i class="fab fa-bootstrap skills-logos"></i
                         ><br />Bootstrap
                       </div>
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-md-4 mb-4">
                         <i class="fab fa-github skills-logos"></i><br />
                         Github
                       </div>
