--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                   </div>
                   <div class="col-md-4">
                     <img
-                      src="images/shecodes-plus.png"
+                      src="images/shecodes-responsive.png"
                       alt="SheCodes-Responsive Certificate"
                       title="SheCodes-Responsive Certificate"
                       class="img-fluid shecodes-image"
